src/test/ui/parser/keyword-const-as-identifier.stderr
error: expected pattern, found keyword `const`
  --> $DIR/keyword-const-as-identifier.rs:4:9
   |
LL |     let const = "foo"; //~ error: expected pattern, found keyword `const`
   |         ^^^^^ expected pattern

error: aborting due to previous error

